--- a/recordings/templates/subjects.html
+++ b/recordings/templates/subjects.html
@@ -11,7 +11,7 @@
     <title>{{subject}}</title>
     <style>
       body{
-        background-color: rgb(132, 117, 119);
+        background-color: rgb(171, 169, 166);
         color: rgb(229, 230, 228);
       }
 
@@ -47,7 +47,7 @@
       <form class="d-flex" method="get">
        
         <input class="form-control me-2" type="search" name="search" placeholder="Search" aria-label="Search" value="{{searchedTerm}}">
-        <button class="btn btn-outline-success" type="submit">Search</button>
+        <button class="btn btn-primary" type="submit">Search</button>
       </form>
     </div>
   </div>
