--- a/recordings/templates/subjects.html
+++ b/recordings/templates/subjects.html
@@ -8,11 +8,17 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <title>{{subject}}</title>
     <style>
       body{
         background-color: rgb(171, 169, 166);
         color: rgb(229, 230, 228);
+      }
+      a{
+        text-decoration: none;
+        color:#000;
+
       }
 
     </style>
@@ -71,7 +77,7 @@
 
                     <td>{{forloop.counter}}</td>
                     <td>{{record.date}}</td>
-                    <td><a href="{{record.link}}" target="_blank">{{record.link}}</a></td>
+                    <td><a href="{{record.link}}" target="_blank"><span id="link{{forloop.counter}}">{{record.link}}</span></a> <i class="fas fa-copy" onclick="copy('link{{forloop.counter}}')"></i></td>
                     <td>{{record.content}}</td>
 
                 </tr>
